Configure tests. Work on API handlers.py
- add new flask app configuration
- update Makefile
- write unit tests for API handlers.py
